nettoyage du code sur plusieurs classes (pas de gros changements)